--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.11"
 numpy = "^1.24.3"
 
 
+[tool.poetry.group.test.dependencies]
+coverage = "^7.2.5"
+pytest = "^7.3.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
