--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "thunderstorm"
+name = "pytorch_thunder"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -21,6 +21,7 @@ pytest = "^7.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
+ruff = "^0.0.265"
 
 [tool.pylint.'MESSAGES CONTROL']
 max-line-length = 88
