--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install
+          poetry install --with test,dev
       - name: Lint with ruff
         run: |
           # stop the build if there are Python syntax errors or undefined names
