--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,6 @@ jobs:
           ruff --format=github --target-version=py37 .
       - name: Test with pytest
         run: |
+          # use virtualenv from project
+          source .venv/bin/activate
           pytest
