--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
-name = "pytorch_thunder"
+name = "thunder-ml"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+packages = [{include = "thunder_ml"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
