--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "thunder-ml"
-version = "0.1.0"
+version = "0.1.3"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Robert Bock <robertbock.98@googlemail.com>"]
 readme = "README.md"
 packages = [{include = "thunder_ml"}]
 
