--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,9 +29,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install poetry
+    - name: Get version number
+      id: extract_version
+      shell: bash
+      run: echo "version=$(echo ${GITHUB_REF#refs/heads/v})" >>$GITHUB_OUTPUT
     - name: Build package
-      run: python -m build
+      run: |
+        poetry version ${{ steps.extract_version.outputs.version }}
+        poetry build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
