--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --with test,dev
-      - name: Lint with ruff
-        run: |
-          # use virtualenv from project
-          source .venv/bin/activate
-          # stop the build if there are Python syntax errors or undefined names
-          ruff --format=github --select=E9,F63,F7,F82 --target-version=py37 .
-          # default set of ruff rules with GitHub Annotations
-          ruff --format=github --target-version=py37 .
+      - name: Run pre-commit stuff
+        uses: pre-commit-ci/lite-action@v1.0.1
+        if: always()
       - name: Test with pytest
         run: |
           # use virtualenv from project
