--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: |
           # use virtualenv from project
           source .venv/bin/activate
-          pytest
+          pytest -m "not visual"
