--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,40 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 22.10.0
-    hooks:
-    -   id: black
-        name: "Formatting with Black."
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.3.0
+  hooks:
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+  - id: check-added-large-files
+  - id: mixed-line-ending
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v2.9.0
+  hooks:
+  - id: pretty-format-yaml
+    name: Prettify YAMLs.
+    args: [--autofix, --indent, '2']
+  - id: pretty-format-toml
+    name: Prettify TOMLs.
+    args: [--autofix]
+- repo: https://github.com/psf/black
+  rev: 22.10.0
+  hooks:
+  - id: black
+    name: Formatting with Black.
 - repo: https://github.com/pycqa/isort
   rev: 5.12.0
   hooks:
-    - id: isort
-      name: Sorting Imports with Isort.
+  - id: isort
+    name: Sorting Imports with Isort.
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   # Ruff version.
-  rev: 'v0.0.269'
+  rev: v0.0.269
   hooks:
-    - id: ruff
-      name: Fixing remaining problems with Ruff.
-      args: [ --fix, --exit-non-zero-on-fix ]
+  - id: ruff
+    name: Fixing remaining problems with Ruff.
+    args: [--fix]
+- repo: https://github.com/yunojuno/pre-commit-xenon
+  rev: cc59b0431a5d072786b59430e9b342b2881064f6
+  hooks:
+  - id: xenon
+    args: [--max-average=A, --max-modules=C, --max-absolute=C]
