--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ scikit-learn = "^1.2.2"
 tensorboard = "^2.13.0"
 
 [tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
 isort = "^5.12.0"
 mypy = "^1.3.0"
 poetry = "^1.5.0"
