--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry install --with test,dev
+        poetry install --with test,dev,ci
     - name: Check coding style
       run: |
         # use virtualenv from project
         source .venv/bin/activate
-        isort --float-to-top --check .
         black --check .
+        isort --float-to-top --check .
         ruff check .
     - name: Ensure low complexity
       run: |
