--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ python = "^3.11"
 scikit-learn = "^1.2.2"
 tensorboard = "^2.13.0"
 
+[tool.poetry.group.ci.dependencies]
+xenon = "^0.9.0"
+
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 isort = "^5.12.0"
@@ -30,7 +33,7 @@ mypy = "^1.3.0"
 poetry = "^1.5.0"
 pre-commit = "^3.3.2"
 pylint = "^2.17.4"
-radon = "^6.0.1"
+radon = "5.1.0"
 ruff = "^0.0.265"
 
 [tool.poetry.group.test.dependencies]
