--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         # use virtualenv from project
         source .venv/bin/activate
-        pytest -m "not visual"
+        pytest -m "not visual" --cov-report term --cov-report xml:coverage.xml --cov=thunder_ml .
     - name: Report Coverage
       uses: ewjoachim/coverage-comment-action@v1
       with:
