--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ tensorboard = "^2.13.0"
 xenon = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
+black = {version = "^23.3.0", python = "^3.8"}
 isort = "^5.12.0"
 mypy = "^1.3.0"
 poetry = "^1.5.0"
